Use UseCGroupMemoryLimitForHeap to prevent OOM killer